// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="create-project-import-bbs"
>
  <SearchBox
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_repositories_by_name"
  />
  <BitbucketRepositories
    disableRepositories={false}
    onSelectRepository={[MockFunction]}
    projectRepositories={
      Object {
        "project": Object {
          "allShown": true,
          "repositories": Array [
            Object {
              "id": 1,
              "name": "Repo",
              "projectKey": "project",
              "slug": "project__repo",
            },
            Object {
              "id": 2,
              "name": "Bar",
              "projectKey": "project",
              "slug": "bar",
              "sqProjectKey": "bar",
            },
          ],
        },
      }
    }
    projects={
      Array [
        Object {
          "id": 1,
          "key": "project",
          "name": "Project",
        },
        Object {
          "id": 2,
          "key": "project2",
          "name": "Project 2",
        },
      ]
    }
  />
</div>
`;

exports[`should render correctly: no projects 1`] = `
<Alert
  className="spacer-top"
  variant="warning"
>
  <FormattedMessage
    defaultMessage="onboarding.create_project.no_bbs_projects"
    id="onboarding.create_project.no_bbs_projects"
    values={
      Object {
        "link": <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/projects/create",
              "query": Object {
                "mode": "bbs",
                "resetPat": 1,
              },
            }
          }
        >
          onboarding.create_project.update_your_token
        </Link>,
      }
    }
  />
</Alert>
`;

exports[`should render correctly: search results 1`] = `
<div
  className="create-project-import-bbs"
>
  <SearchBox
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_repositories_by_name"
  />
  <BitbucketSearchResults
    disableRepositories={false}
    onSelectRepository={[MockFunction]}
    projects={
      Array [
        Object {
          "id": 1,
          "key": "project",
          "name": "Project",
        },
        Object {
          "id": 2,
          "key": "project2",
          "name": "Project 2",
        },
      ]
    }
    searchResults={
      Array [
        Object {
          "id": 1,
          "name": "Repo",
          "projectKey": "project",
          "slug": "project__repo",
        },
      ]
    }
    searching={false}
  />
</div>
`;

exports[`should render correctly: searching 1`] = `
<div
  className="create-project-import-bbs"
>
  <SearchBox
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_repositories_by_name"
  />
  <BitbucketSearchResults
    disableRepositories={false}
    onSelectRepository={[MockFunction]}
    projects={
      Array [
        Object {
          "id": 1,
          "key": "project",
          "name": "Project",
        },
        Object {
          "id": 2,
          "key": "project2",
          "name": "Project 2",
        },
      ]
    }
    searching={true}
  />
</div>
`;
